update bug flyout/collapse

--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -9,4 +9,9 @@
       transform: translateX(-240px);
     }
   }
+  @include breakpoint($breakpoints-flyout) {
+    &.collapse {
+      display: block;
+    }
+  }
 }
